# raytracer

./: .gitignore  main.c  meson.build
include/: aabb.h  camera.h  color.h  hit_record.h  hittable.h  hittable_list.h  image.h  material.h  model.h  options.h  png_write.h  ray.h  trace.h  triangle.h  util.h  vec3.h  work_queue.h  world.h
src/: aabb.c  camera.c  color.c  hit_record.c  hittable.c  hittable_list.c  image.c  main.c  material.c  meson.build  model.c  options.c  png_write.c  ray.c  trace.c  triangle.c  util.c  vec3.c  work_queue.c  world.c
subprojects/: .gitignore  cglm.wrap  tinyobjloader-c.wrap
subprojects/packagefiles/tinyobjloader-c_patch/: meson.build
tests/: scene.json  scene2.json
